# ItKariera2026Esp32

./: Cargo.toml  README.md  build.rs  flake.nix  package.nix  rom_functions.x  rust-toolchain.toml  wifi-password.txt
.cargo/: config.toml
.helix/: languages.toml
assets/: SpaceMono-Regular.bdf  SpaceMono-Regular.rs
docs/: knbxzn3.odt
src/: main.rs
