[package]
name = "itkariera"
version = "0.1.0"
edition = "2024"

[dependencies]
epd-waveshare = { version = "0.6.0", git = "https://github.com/XLPhere/epd-waveshare.git", branch = "async", features = [
    "async",
] }

embedded-graphics = "0.8.1"
gc9a01-rs = "0.4.2"
embedded-hal-bus = { version = "0.2", features = ["async"] }
micromath = { version = "2.1.0" }
embassy-executor = { version = "0.7.0", features = ["nightly"] }
esp-hal = { version = "1.0.0-rc.0", default-features = false, features = [
    "defmt",
    "esp32",
    "unstable",
    "rt",
] }
esp-hal-embassy = { version = "0.9.0", features = ["esp32"] }
embassy-sync = "0.6.2"
static_cell = { version = "2.1.0", features = ["nightly"] }
embassy-time = { version = "0.4.0" }
embassy-embedded-hal = "0.3.0"
esp-backtrace = { version = "0.15.1", features = [
    "panic-handler",
    "esp32",
    "defmt",
] }
defmt = "1"
embedded-hal = "1"
esp-println = { version = "0.13.1", default-features = false, features = [
    "defmt-espflash",
    "esp32",
    "uart",
] }
critical-section = "1.1.3"
embassy-futures = { version = "0.1.1", features = ["defmt"] }
bma423 = "0.0.4"
async-debounce = "0.2.0"
embedded-hal-async = "1"
either = { version = "1.13.0", default-features = false }
futures = { version = "0.3.30", default-features = false, features = [
    "async-await",
] }
pin-project-lite = "0.2.14"
embedded-nal-async = "0.8.0"
esp-wifi = { version = "0.15.0", features = ["esp32", "wifi", "defmt", "smoltcp"] }
reqwless = { version = "0.13.0", default-features = false, features = [
    "defmt",
] }
heapless = { version = "0.8.0", features = ["defmt-03", "ufmt"] }
embedded-svc = { version = "0.28.0", default-features = false, features = [
    "nightly",
] }
embassy-net = { version = "0.6.0", features = [
    "tcp",
    "dhcpv4",
    "medium-ethernet",
    "dns",
    "defmt",
    "udp",
] }
pin-utils = "0.1.0"
sntpc = { version = "0.5.2", default-features = false }
smoltcp = { version = "0.12.0", default-features = false, features = [
    "async",
    "defmt",
    "socket",
    "socket-udp",
] }
itoa = "1.0.11"
time = { version = "0.3.36", default-features = false }
ufmt = "0.2.0"
esp-alloc = { version = "0.8.0", features = ["nightly"] }
chrono = { version = "0.4.38", default-features = false }
xtensa-lx-rt = { version = "0.18.0", features = [
    "float-save-restore",
    "esp32",
] }

esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32"] }
esp-rom-sys = { version = "0.1.3", features = ["esp32"] }
tinybmp = "0.7.0"

[dev-dependencies]
embedded-test = { version = "0.6.0", features = [
    "embassy",
    "defmt",
    "external-executor",
] }
semihosting = { version = "0.1.15", features = ["openocd-semihosting"] }
smol = "2.0.2"

# [[test]]
# name = "example_test"
# harness = false
